# ragmetrics-package

./: .gitignore  README.md  __init__.py  download_halu_eval.py  pyproject.toml  ragmetrics_agents.py  requirements.txt  setup.py
.github/workflows/: test-openai-versions.yml
client/: jivan_traces.py  langsmith_client.py  rm_client.ipynb  rm_client.py  test_experiment.py  test_logtrace.py
ragmetrics/: __init__.py  api.py  base_object.py  client.py  criteria.py  dataset.py  decorators.py  default_callback.py  experiments.py  models.py  openai_chat_wrapper.py  reviews.py  tasks.py  trace.py  utils.py
ragmetrics/client_integrations/: __init__.py  langchain_wrapper.py  litellm_wrapper.py  openai_agent_wrapper.py  openai_agents_trace_processor.py  openai_chat_wrapper.py  openai_v0_wrapper.py  wrapper_utils.py
ragmetrics/integrations/: agents.py  openai_agents.py
test/: README.md  agent3-client.py  agent3-server.py  conftest.py  mcpclient.py  mcpserver.py  openai_agent.py  openai_agent_test.py  openai_agent_test2.py  ragmetrics_review_queue.py  run_all_openai_tests.sh  test_api.py  test_decorators.py  test_default_cohort.py  test_experiment.py  test_function_handling.py  test_local_function.py  test_local_function_2x2.py  test_local_function_min.py  test_logtrace.py  test_models.py  test_openai_agents_trace.py  test_openai_versions.py  test_optional_cohorts.py  test_processing.py  test_tool_call_tracing.py  test_tool_calls.py  test_trace_save_and_download.py  test_utils.py
test/integrations/: __init__.py  conftest.py  test_langchain_wrapper.py  (+1 more)
(+23 files in other folders)
